--- a/listar-colmeia.html
+++ b/listar-colmeia.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ApiPro</title>
         <link rel="stylesheet" href="css/inicial.css">
-        <link rel="stylesheet" href="css/registro.css">
+        <link rel="stylesheet" href="css/listar.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="shortcut icon" href="assets/logoAP.png" type="image/x-icon">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -29,7 +29,7 @@
                   </a>
                </li>
                <li>
-                  <a href="registrar-colmeia.html" class="nav-link text-white active">
+                  <a href="registrar-colmeia.html" class="nav-link text-white">
                      <svg class="bi me-2" width="16" height="16">
                         <use xlink:href="#speedometer2"></use>
                      </svg>
@@ -37,7 +37,7 @@
                   </a>
                </li>
                <li>
-                  <a href="listar-colmeia.html" class="nav-link text-white">
+                  <a href="listar-colmeia.html" class="nav-link text-white active">
                      <svg class="bi me-2" width="16" height="16">
                         <use xlink:href="#table"></use>
                      </svg>
@@ -103,23 +103,11 @@
             </div>
         </div>
         <main class="column">
-            <h2 style="margin-bottom: 25px; text-align: center;">Registrar nova colmeia</h2><br>
-            <form action="#" method="POST">
-                
-                <label id="label-iddent" for="ident">Digite a Identificação</label><br>
-                <input class="digitar" type="text" id="ident" placeholder="Identificação" required><br><br>
-
-                <label id="label-local" for="local">Digite a Localização</label><br>
-                <input class="digitar" type="text" id="local" placeholder="Localização" required><br><br>
-
-                <label id="label-raca" for="raca">Digite a Raça</label><br>
-                <input class="digitar" type="text" id="raca" placeholder="Raça" required><br><br>
-                
-                <label id="label-obs" for="obs">Observações Adicionais</label><br>
-                <input class="digitar" type="text" id="obs" placeholder="Observações" required><br><br>
-
-                <button id="submit" type="submit" class="btn btn-outline-primary">Acessar</button>
-            </form>
+            <h2 style="margin-bottom: 25px; text-align: center; font-size: 1.5em;">Melgueira</h2><br>
+            <div class="div-lista">
+                <h4 class="identif-melgueira">Identificação: </h4>
+                <span>A2</span>
+            </div>
         </main>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
