--- a/tela-inicial.html
+++ b/tela-inicial.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div id="barra-lateral" class="sidebar d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 280px;">
-            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+            <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
                <svg class="bi me-2" width="40" height="32">
                   <use xlink:href="#"></use>
                </svg>
