alterações nas telas

--- a/index.html
+++ b/index.html
@@ -11,15 +11,11 @@
         <div class="left-panel">
             <h1>ApiPro</h1>
             <h2>SISTEMA DE APICULTORES</h2>
-            <p>Registre-se para acessar todos os recursos do nosso sistema.</p>
+            <p>Faça login e acesse seu painel de apicultores.</p>
         </div>
         <div class="right-panel">
-            <h2>Registrar-se no painel</h2>
+            <h2>Fazer login no Painel</h2>
             <form action="#" method="POST">
-                <div class="form-group">
-                    <label for="nome">Digite seu nome</label><br>
-                    <input type="text" id="nome" name="nome" placeholder="Seu Nome" required>
-                </div>
                 <div class="form-group">
                     <label for="email">Digite seu email</label><br>
                     <input type="email" id="email" name="email" placeholder="Seu Email" required>
@@ -28,10 +24,8 @@
                     <label for="senha">Digite sua senha</label><br>
                     <input type="password" id="senha" name="senha" placeholder="Sua Senha" required>
                 </div>
-                <div class="form-group">
-                    <label for="senha-rep">Repita sua senha</label><br>
-                    <input type="password" id="senha-rep" name="senha-rep" placeholder="Repita Senha" required>
-                </div><br>
+                <br>
+                <button type="submit">Login</button>
                 <button type="submit">Registrar</button>
             </form>
         </div>
