Crud finalizado + Telas de Login/Cadastro alteradas

--- a/login.html
+++ b/login.html
@@ -1,61 +1,51 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="assets/logoAP.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/index.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>ApiPro</title>
-</head>
-<body>
-    <main id="tela-login">
-        <div id="ajust-tri2">
-            <div id="ajust-tri">
-                <div id="quadro-logo">
-                    <img id="logoAP" src="assets/logoAP.png" alt="IMAGEM NÃO CARREGADA">
-                    <h1 id="nome-logo">ApiPro</h1>
-                </div>
-                <section id="sessao-login">
-                    <h2 id="msg-acesse">ACESSE SEU PAINEL DE COLMEIAS</h2>
-                    <h3 id="msg-login">Faça login com e-mail e senha</h3>
-                    <form action="#" method="POST">
-                        <label id="label-email" for="email">Digite seu e-mail</label>
-                        <input class="digitar" type="text" id="email" placeholder="E-mail" required>
-                        <label id="label-senha" for="senha">Digite sua senha</label>
-                        <input class="digitar" type="password" id="senha" placeholder="Senha" required><br><br>
-                        <div id="container">
-                            <div id="lembrar-se">
-                                <input type="checkbox" name="check" id="check">
-                                <span id="text-lembrar">Lembrar minha senha</span>
-                            </div>
-                            <a id="esqueceu-senha" href="#">Esqueci minha senha</a>
-                        </div>
-                    </form>
-                    <br>
-                    <div id="botoes">
-                        <button id="registro" type="button" class="btn btn-outline-secondary">Registrar</button>
-                        <button id="acesso" type="button" class="btn btn-outline-primary">Acessar</button>
-                    </div>
-                    <hr style="margin-top: 25px;" class="linha-sep">
-                    <p>Acesse também com</p>
-                    <hr class="linha-sep"><br>
-                    <div id="icons-sociais">
-                        <a class="icones" href="#">
-                            <img class="icones-img" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/google/google-original.svg" />
-                        </a>
-                        <a class="icones" href="#">
-                            <img class="icones-img" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/facebook/facebook-original.svg" />
-                        </a>
-                        <a class="icones" href="#">
-                            <img class="icones-img" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" />
-                        </a>
-                    </div>
-                </section>
-            </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="css/login.css" />
+    <title>Login - ApiPro</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="card">
+        <h1>Entrar</h1>
+
+        <div id="msgError"></div>
+
+        <div class="label-float">
+          <input type="text" id="usuario" paceholder="" required />
+          <label id="userLabel" for="usuario">Usuario</label>
         </div>
-    </main>
-</body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+        <div class="label-float">
+          <input type="password" id="senha" paceholder="" required />
+          <label id="senhaLabel" for="senha">Senha</label>
+          <i class="fa fa-eye" aria-hidden="true"></i>
+        </div>
+
+        <div class="justify-center">
+          <button onclick="entrar()">Entrar</button>
+        </div>
+
+        <div class="justify-center">
+          <hr />
+        </div>
+
+        <p>
+          Não tem uma conta?
+          <a href="cadastro.html">
+            Cadastre-se
+          </a>
+        </p>
+      </div>
+    </div>
+
+    <script src="js/login.js"></script>
+  </body>
 </html>
