--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
             <hr>
             <ul class="nav nav-pills flex-column mb-auto">
                <li class="nav-item">
-                  <a href="tela-inicial.html" class="nav-link active" aria-current="page">
+                  <a href="home.html" class="nav-link active" aria-current="page">
                      <svg class="bi me-2" width="16" height="16">
                         <use xlink:href="#home"></use>
                      </svg>
@@ -28,35 +28,11 @@
                   </a>
                </li>
                <li>
-                  <a href="registrar-colmeia.html" class="nav-link text-white">
+                  <a href="colmeias.html" class="nav-link text-white">
                      <svg class="bi me-2" width="16" height="16">
                         <use xlink:href="#speedometer2"></use>
                      </svg>
-                     Registrar colmeia
-                  </a>
-               </li>
-               <li>
-                  <a href="#" class="nav-link text-white">
-                     <svg class="bi me-2" width="16" height="16">
-                        <use xlink:href="#table"></use>
-                     </svg>
-                     Listar colmeias
-                  </a>
-               </li>
-               <li>
-                  <a href="#" class="nav-link text-white">
-                     <svg class="bi me-2" width="16" height="16">
-                        <use xlink:href="#grid"></use>
-                     </svg>
-                     Notificações
-                  </a>
-               </li>
-               <li>
-                  <a href="#" class="nav-link text-white">
-                     <svg class="bi me-2" width="16" height="16">
-                        <use xlink:href="#people-circle"></use>
-                     </svg>
-                     Condições climáticas
+                     Painel de colmeias
                   </a>
                </li>
                <li>
@@ -76,7 +52,7 @@
                   </a>
                </li>
                <li>
-                  <a href="#" class="nav-link text-white">
+                  <a href="suporte.html" class="nav-link text-white">
                      <svg class="bi me-2" width="16" height="16">
                         <use xlink:href="#people-circle"></use>
                      </svg>
@@ -88,7 +64,7 @@
             <div class="dropdown">
                <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
                <img src="assets/user.png" alt="" width="32" height="32" class="rounded-circle me-2">
-               <strong>@Usuário</strong>
+               <strong id="nUser"></strong>
                </a>
                <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
                   <li><a class="dropdown-item" href="#">Meu perfil</a></li>
@@ -97,13 +73,13 @@
                   <li>
                      <hr class="dropdown-divider">
                   </li>
-                  <li><a class="dropdown-item" href="#">Sair</a></li>
+                  <li><a class="dropdown-item" onclick="sair()" href="login.html">Sair</a></li>
                </ul>
             </div>
         </div>
         <main class="column">
            <header id="inicio">
-               <h1 id="user-bv">BEM VINDO, @USUARIO</h1>
+               <h1 id="user-bv"></h1>
                <nav id="topicos-iniciais">
                   <div class="block-top">
                      <span class="span-block">0</span>
@@ -195,5 +171,7 @@
         </section>
          </main>
     </body>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="js/home.js"></script>
 </html>
